# notion-knowledge-distiller-mcp

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  run_server.py
src/: __init__.py  notion_client.py  prompts.py  server.py
